test-results/init_struct.err
examples/init_struct.c: In function ‘main’:
examples/init_struct.c:19:5: error: stray ‘@’ in program
   19 |     @useCreate(Point)p;
      |     ^
examples/init_struct.c:19:6: warning: implicit declaration of function ‘useCreate’ [-Wimplicit-function-declaration]
   19 |     @useCreate(Point)p;
      |      ^~~~~~~~~
examples/init_struct.c:19:16: error: expected expression before ‘Point’
   19 |     @useCreate(Point)p;
      |                ^~~~~
examples/init_struct.c:19:22: error: expected ‘;’ before ‘p’
   19 |     @useCreate(Point)p;
      |                      ^
      |                      ;
examples/init_struct.c:20:5: error: stray ‘@’ in program
   20 |     @useCreate(Point)q = { .x = 5, .y = 9 };
      |     ^
examples/init_struct.c:20:16: error: expected expression before ‘Point’
   20 |     @useCreate(Point)q = { .x = 5, .y = 9 };
      |                ^~~~~
examples/init_struct.c:20:22: error: expected ‘;’ before ‘q’
   20 |     @useCreate(Point)q = { .x = 5, .y = 9 };
      |                      ^
      |                      ;
examples/init_struct.c:21:27: error: ‘p’ undeclared (first use in this function)
   21 |     _Point_method_print(&(p));
      |                           ^
examples/init_struct.c:21:27: note: each undeclared identifier is reported only once for each function it appears in
examples/init_struct.c:22:5: error: ‘q’ undeclared (first use in this function)
   22 |     q.print();
      |     ^
